RCW215 Fix donate page overlap

--- a/Website/static/css/style.css
+++ b/Website/static/css/style.css
@@ -619,7 +619,7 @@ h1.hero-heading {
 
 /* Title Block*/
 
-@media (min-width: 568px) {
+@media (min-width: 1367px) {
     #block-title {
         height: 800px;
         width: 100%;
@@ -732,6 +732,108 @@ h1.hero-heading {
     }
 }
 
+
+
+@media screen and (min-device-width: 568px) and (max-device-width: 1366px) { 
+
+    #block-title2 {
+        height: 300px;
+        position: relative;
+        padding-top: 30px;
+        text-align: center;
+
+    }
+
+    #block-title3 {
+        height: 300px;
+     width: fit-content;
+        position: relative;
+        padding-top: 50px;
+        text-align: center;
+    }
+
+    #title-label {
+        font-size: 40px;
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight: 520;
+        position: absolute;
+        top: -30px;
+        left: 20px;
+        height: 40px;
+        width: 300px;
+        background-color: rgb(255, 255, 255);
+        text-align: center;
+        text-shadow: 3px 4px 4px rgba(129, 129, 129, 0.947);
+    }
+
+    #title-label1 {
+        font-size: 40px;
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight: 520;
+        position: absolute;
+        top: -30px;
+        left: 20px;
+        height: 40px;
+        width: 400px;
+        background-color: rgb(255, 255, 255);
+        text-align: center;
+        text-shadow: 3px 4px 4px rgba(129, 129, 129, 0.947);
+    }
+
+    #title-label2 {
+        font-size: 40px;
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight: 520;
+        position: absolute;
+        top: -30px;
+        left: 20px;
+        height: 40px;
+        width: 280px;
+        background-color: rgb(255, 255, 255);
+        text-align: center;
+        text-shadow: 3px 4px 4px rgba(129, 129, 129, 0.947);
+    }
+
+    #title-label3 {
+        font-size: 35px;
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight: 500;
+        position: absolute;
+        top: -30px;
+        left: 7%;
+        height: 40px;
+        width: 400px;
+        background-color: rgb(255, 255, 255);
+        text-align: center;
+        text-shadow: 3px 4px 4px rgba(129, 129, 129, 0.947);
+    }
+
+    #title-label4 {
+        font-size: 35px;
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight: 500;
+        position: absolute;
+        top: -30px;
+        left: 10%;
+        height: 40px;
+        width: 400px;
+        background-color: rgb(255, 255, 255);
+        text-align: center;
+        text-shadow: 3px 4px 4px rgba(129, 129, 129, 0.947);
+    }
+
+    div.name-phone {
+        font-size: 0;
+    }
+
+    div.h3{
+        font-size: 100px;
+    }
+    
+}
+
+
+
 @media (max-width : 567px) {
     #block-title {
         font-family: "Roboto", sans-serif;
@@ -761,6 +863,7 @@ h1.hero-heading {
         text-shadow: 1px 4px 4px rgba(116, 116, 116, 0.947);
     }
 }
+
 
 /* Event CSS*/
 
@@ -1309,10 +1412,11 @@ h1.hero-heading {
 
 /*CSS Team Member*/
 .team-item {
-    padding: 35px;
-    padding-right: 0;
+    padding: 25px;
+    padding-right: 0px;
     position: relative;
     z-index: 0;
+    margin: 0 auto;
 }
 
 .team-item:after,
@@ -1356,8 +1460,7 @@ h1.hero-heading {
     box-shadow: 0 0 20px 0 rgba(51, 51, 51, 0.2);
     border-radius: 10px;
     width: calc(100% - 70px);
-    height: 300px;
-    
+    height: auto;
     overflow: hidden;
 }
 
